--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <div class="container-fliud text-center my-5 py-1">
           <h1><b>Tic Tac Toe</b></h1>
+          <h6>Player vs Player</h6>
         <div class="game my-4">
           
         <button class="box"> _</button>
